--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
-Hello World
+<!doctype html>
+<html>
+
+
+<head>
+    <title>JoshuaASmith</title>
+</head>
+
+<body>
+    <div>
+        <h1>Hello World</h1>
+    </div>
+</body>
+
+</html>
